--- a/telasRicardo/telas.html
+++ b/telasRicardo/telas.html
@@ -48,7 +48,7 @@
     </div>
     <div id="informacoes">
         <h1 class="titulo">Informações Gerais</h1>
-        <div id="itens">
+        <div class="itens">
             <div id="oque" class="item_info">
                 <span>
                     <i class="fa fa-laptop" aria-hidden="true"></i>
@@ -78,7 +78,54 @@
             </div>
         </div>
     </div>
-    <script src="banner.js" async defer></script>
+    <div id="patrocinio">
+        <h1 class="titulo">Patrocinio</h1>
+        <div class="itens">
+            <div class="item">
+                <img src="logoPatrocinio.png" class="logo" alt="Logo 1"/>
+            </div>
+            <div class="item">
+                <img src="logoPatrocinio.png" class="logo" alt="Logo 2"/>
+            </div>
+            <div class="item">
+                <img src="logoPatrocinio.png" class="logo" alt="Logo 3"/>
+            </div>
+            <div class="item">
+                <img src="logoPatrocinio.png" class="logo" alt="Logo 4"/>
+            </div>
+            <div class="item">
+                <img src="logoPatrocinio.png" class="logo" alt="Logo 5"/>
+            </div>
+            <div class="item">
+                <img src="logoPatrocinio.png" class="logo" alt="Logo 6"/>
+            </div>
+            <div class="item">
+                <img src="logoPatrocinio.png" class="logo" alt="Logo 7"/>
+            </div>
+        </div>
+    </div>
+    <div id="apoio">
+        <h1 class="titulo">Apoio</h1>
+        <div class="itensApoio">
+            <div class="itemApoio" style="display:flex; justify-content:center; flex-direction:column">
+                <a href="http://www.each.usp.br/" target="_blank">
+                    <center>
+                        <img src="logoEACH.png" class="logo" alt=""/>
+                    </center>
+                </a>
+            </div>
+            <div class="itemApoio">
+                <a href="https://www5.usp.br/" target="_blank">
+                    <center>
+                        <img src="logoUSP.png" class="logo" alt=""/>
+                    </center>
+                </a>
+            </div>
+        </div>
+        <a href="http://www.each.usp.br/si/" target="_blank">
+            <img src="logoSI.png" class="logoSI" alt=""/>
+        </a>
+    </div>
 </body>
 
 </html>
