--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Nunito" />
-    <link rel="stylesheet" type="text/css" href = "GlobalStyles.css" />
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/geometric" type="text/css"/> 
+    <link rel="stylesheet" type="text/css" href = "GlobalStyle.css" />
+    <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
+
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
