--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -7,8 +7,8 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Nunito" />
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/geometric" type="text/css"/> 
-    <link rel="stylesheet" type="text/css" href = "GlobalStyle.css" />
-    <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href = "%PUBLIC_URL%/GlobalStyle.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/font-awesome/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <meta name="theme-color" content="#000000" />
     <meta
